Rendering pipeline changes
+ Capped Engine to 12Hz(FPS)
+ Fixed the way the screen is cleared on NT/Windows
+ Reduced splash screen time from 5 seconds to 3
- Removed deprecated code